tests/snapshots/examples_fixtures/type_system__16_effect_annotated.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/16_effect_annotated.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/16_effect_annotated.flx:14:1
   |
14 | print(log_and_double(5))
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/type_system/16_effect_annotated.flx:14:1
   |
14 | print(log_and_double(5))
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------ effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/16_effect_annotated.flx:22:1
   |
22 | print(just_double(5))
   | ^^^^^^^^^^^^^^^^^^^^^
   | --------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/type_system/16_effect_annotated.flx:29:1
   |
29 | print(add(3, 4))
   | ^^^^^^^^^^^^^^^^
   | ---------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 4 errors.
== stdout ==
<not executed>
